fix: Corrige atualização de scopes no CRUD de users
