# api/app/DTO/Input/CreateUserRequestDTO.php
@@ -3,29 +3,28 @@
 namespace App\DTO\Input;
 
 use App\DTO\DataTransferObject;
-use Illuminate\Http\Request;
 
 class CreateUserRequestDTO extends DataTransferObject
 {
 
     private function __construct(
         public $email,
-        public $scope_id
+        public $allowed_scopes
     )
     { }
 
     protected static function getValidationRules($rawInput) {
         return [
             'email' => 'required|email|unique:user,email',
-            'scope_id' => 'required|array',
-            'scope_id.*' => 'required|integer|exists:scope,id'
+            'allowed_scopes' => 'array',
+            'allowed_scopes.*' => 'string|exists:scope,name'
         ];
     }
 
     public static function fromArray(array $array) {
         return new CreateUserRequestDTO(
             $array['email'],
-            $array['scope_id']
+            $array['allowed_scopes'] ?? null
         );
     }
 }
